Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
@@ -133,7 +133,7 @@
   "an3.70:19.2": "‚Solange sie leben, unterlassen die Vollendeten das Töten lebender Geschöpfe und verzichten auf Stock und Schwert. Sie sind gewissenhaft und gütig und leben voller Anteilnahme für alle Lebewesen. ",
   "an3.70:19.3": "Auch ich will für diesen Tag und diese Nacht das Töten lebender Geschöpfe unterlassen und auf Stock und Schwert verzichten. Ich will gewissenhaft und gütig sein und voller Anteilnahme für alle Lebewesen leben. ",
   "an3.70:19.4": "Indem ich es in dieser Hinsicht den Vollendeten gleichtue, will ich den Besinnungstag einhalten. ",
-  "an3.70:20.1": "‚Solange sie leben, unterlassen die Vollendeten das Stehlen. Sie nehmen nur, was gegeben wird, erwarten nur, was gegeben wird. Sie sind nicht diebisch und erhalten sich rein. ",
+  "an3.70:20.1": "Solange sie leben, unterlassen die Vollendeten das Stehlen. Sie nehmen nur, was gegeben wird, erwarten nur, was gegeben wird. Sie sind nicht diebisch und erhalten sich rein. ",
   "an3.70:20.2": "Auch ich will für diesen Tag und diese Nacht das Stehlen unterlassen. Ich will nur nehmen, was gegeben wird, nur erwarten, was gegeben wird. Ich will nicht diebisch sein und mich rein erhalten. ",
   "an3.70:20.3": "Indem ich es in dieser Hinsicht den Vollendeten gleichtue, will ich den Besinnungstag einhalten. ",
   "an3.70:21.1": "‚Solange sie leben, unterlassen die Vollendeten unkeusches Verhalten. Sie leben enthaltsam und abgesondert und vermeiden die übliche Praxis des Geschlechtsverkehrs. ",
