--- a/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
@@ -151,7 +151,7 @@
   "an3.70:25.1": "Solange sie leben, meiden die Vollendeten Tanz, Gesang, Musik und den Besuch von Shows; sie vermeiden, sich mit Kränzen, Parfüm und Make-up zu verschönern und zu schmücken. ",
   "an3.70:25.2": "Auch ich will für diesen Tag und diese Nacht Tanz, Gesang, Musik und den Besuch von Shows meiden; ich will vermeiden, mich mit Kränzen, Parfüm und Make-up zu verschönern und zu schmücken. ",
   "an3.70:25.3": "Indem ich es in dieser Hinsicht den Vollendeten gleichtue, will ich den Besinnungstag einhalten. ",
-  "an3.70:26.1": "‚Solange sie leben, unterlassen die Vollendeten die Benutzung hoher und üppiger Betten. Sie schlafen an einem niedrigen Platz, entweder auf einer Liege oder einer Strohmatte. ",
+  "an3.70:26.1": "Solange sie leben, unterlassen die Vollendeten die Benutzung hoher und üppiger Betten. Sie schlafen an einem niedrigen Platz, entweder auf einer Liege oder einer Strohmatte. ",
   "an3.70:26.2": "Auch ich will für diesen Tag und diese Nacht die Benutzung hoher und üppiger Betten unterlassen. Ich will an einem niedrigen Platz schlafen, entweder auf einer Liege oder einer Strohmatte. ",
   "an3.70:26.3": "Indem ich es in dieser Hinsicht den Vollendeten gleichtue, will ich den Besinnungstag einhalten.‘ ",
   "an3.70:27.1": "Das ist der Besinnungstag der Edlen. ",
