Translations by BhikkhuSekha to translation/fr/sekha/sutta/an/an11/an11.3_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/an/an11/an11.3_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.3_translation-fr-sekha.json
@@ -12,7 +12,7 @@
   "an11.3:1.8": "Lorsqu’il n’y a pas de connaissance & vision (des phénomènes) tels qu’ils sont réellement, lorsque la connaissance & vision (des phénomènes) tels qu’ils sont réellement fait défaut, la condition sinéquanone du désenchantement est ruinée.",
   "an11.3:1.9": "Lorsqu’il n’y a pas de désenchantement, lorsque le désenchantement fait défaut, la condition sinéquanone du désintéressement est ruinée.",
   "an11.3:1.10": "Lorsqu’il n’y a pas de désintéressement, lorsque le désintéressement fait défaut, la condition sinéquanone de la connaissance & vision de la libération est ruinée.",
-  "an11.3:2.1": "Imaginez, mendiants, un arbre dont les branches et les feuilles font défaut : son écorce externe n’atteint pas sa complétude, son écorce interne (…) son bois (…) sa moelle n’atteint pas sa plénitude.",
+  "an11.3:2.1": "Imaginez, mendiants, un arbre dont les branches et les feuilles font défaut : son écorce externe n’atteint pas sa complétude, son écorce interne (…) son bois (…) sa moelle n’atteint pas sa complétude.",
   "an11.3:2.2": "De la même manière, mendiants, pour celui qui manque de vertu, chez qui la vertu fait défaut, la condition sinéquanone de l’absence de remords est ruinée.",
   "an11.3:2.3": "Lorsqu’il n’y a pas d’absence de remords, lorsque l’absence de remords fait défaut, la condition sinéquanone de la joie est ruinée (…)",
   "an11.3:2.4": "la connaissance & vision de la libération est ruinée.",
