--- a/translation/fr/sekha/sutta/an/an11/an11.3_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.3_translation-fr-sekha.json
@@ -26,7 +26,7 @@
   "an11.3:3.8": "Celui chez qui il y a la connaissance & vision (des phénomènes) tels qu’ils sont réellement, qui est pourvu de connaissance & vision (des phénomènes) tels qu’ils sont réellement, est pourvu de la condition sinéquanone du désenchantement.",
   "an11.3:3.9": "Celui chez qui il y a le désenchantement, qui est pourvu de désenchantement, est pourvu de la condition sinéquanone du désintéressement.",
   "an11.3:3.10": "Celui chez qui il y a le désintéressement, qui est pourvu de désintéressement, est pourvu de la condition sinéquanone de la connaissance & vision de la libération.",
-  "an11.3:4.1": "Imaginez, mendiants, un arbre pourvu de branches et de feuilles : son écorce externe atteint sa complétude, son écorce interne (…) son bois (…) sa moelle atteint sa plénitude.",
+  "an11.3:4.1": "Imaginez, mendiants, un arbre pourvu de branches et de feuilles : son écorce externe atteint sa complétude, son écorce interne (…) son bois (…) sa moelle atteint sa complétude.",
   "an11.3:4.2": "De la même manière, mendiants, celui qui est vertueux, qui est doué de vertu, est doué de la condition sinéquanone de l’absence de remords.",
   "an11.3:4.3": "Celui chez qui il y a une absence de remords, qui est doué d’absence de remords, est doué de la condition sinéquanone de (…)",
   "an11.3:4.4": "la connaissance & vision de la libération.",
