--- a/translation/fr/sekha/sutta/an/an11/an11.4_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/an/an11/an11.4_translation-fr-sekha.json
@@ -30,7 +30,7 @@
   "an11.4:4.8": "Celui chez qui il y a la connaissance & vision (des phénomènes) tels qu’ils sont réellement, qui est pourvu de connaissance & vision (des phénomènes) tels qu’ils sont réellement, est pourvu de la condition sinéquanone du désenchantement.",
   "an11.4:4.9": "Celui chez qui il y a le désenchantement, qui est pourvu de désenchantement, est pourvu de la condition sinéquanone du désintéressement.",
   "an11.4:4.10": "Celui chez qui il y a le désintéressement, qui est pourvu de désintéressement, est pourvu de la condition sinéquanone de la connaissance & vision de la libération.",
-  "an11.4:5.1": "Imaginez, mes amis, un arbre pourvu de branches et de feuilles : son écorce externe atteint sa complétude, son écorce interne (…) son bois (…) sa moelle atteint sa plénitude.",
+  "an11.4:5.1": "Imaginez, mes amis, un arbre pourvu de branches et de feuilles : son écorce externe atteint sa complétude, son écorce interne (…) son bois (…) sa moelle atteint sa complétude.",
   "an11.4:5.2": "De la même manière, mes amis, celui qui est vertueux, qui est doué de vertu, est doué de la condition sinéquanone de l’absence de remords.",
   "an11.4:5.3": " Celui chez qui il y a une absence de remords, qui est doué d’absence de remords, est doué de la condition sinéquanone de la joie (…)",
   "an11.4:5.4": "la connaissance & vision de la libération.»",
