--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -1,5 +1,6 @@
 {
   "dhp129:0.1": "Collection of Minor Texts",
   "dhp129:0.2": "Verses of Dhamma",
-  "dhp129:0.3": "Chapter on Violence"
+  "dhp129:0.3": "Chapter on Violence",
+  "dhp129:1": "Everyone dreads violence,"
 }
