Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -2,5 +2,6 @@
   "dhp129:0.1": "Collection of Minor Texts",
   "dhp129:0.2": "Verses of Dhamma",
   "dhp129:0.3": "Chapter on Violence",
-  "dhp129:1": "Everyone dreads violence,"
+  "dhp129:1": "Everyone dreads violence,",
+  "dhp129:2": "everyone fears death;"
 }
