Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -4,5 +4,5 @@
   "dhp129:0.3": "Chapter on Violence",
   "dhp129:1": "Everyone dreads violence,",
   "dhp129:2": "everyone fears death;",
-  "dhp129:3": "Recognizing that it is the same for you,"
+  "dhp129:3": "recognizing that you are similar,"
 }
