--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -5,5 +5,6 @@
   "dhp129:1": "Everyone dreads violence,",
   "dhp129:2": "everyone fears death;",
   "dhp129:3": "recognizing that you are similar,",
-  "dhp129:4": "do not harm or cause others to harm."
+  "dhp129:4": "do not harm or cause others to harm.",
+  "dhp130:1": "Everyone dreads violence,"
 }
