Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -6,5 +6,6 @@
   "dhp129:2": "everyone fears death;",
   "dhp129:3": "recognizing that you are similar,",
   "dhp129:4": "do not harm or cause others to harm.",
-  "dhp130:1": "Everyone dreads violence,"
+  "dhp130:1": "Everyone dreads violence,",
+  "dhp130:2": "everyone likes to live;"
 }
