Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -8,5 +8,6 @@
   "dhp129:4": "do not harm or cause others to harm.",
   "dhp130:1": "Everyone dreads violence,",
   "dhp130:2": "everyone likes to live;",
-  "dhp130:3": "recognizing that you are similar,"
+  "dhp130:3": "recognizing that you are similar,",
+  "dhp130:4": "do not harm or cause others to harm."
 }
