Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -11,5 +11,5 @@
   "dhp130:3": "recognizing that you are similar,",
   "dhp130:4": "do not harm or cause others to harm.",
   "dhp131:1": "One who violently harms",
-  "dhp131:2": "beings who are seeking pleasure"
+  "dhp131:2": "beings who want pleasure"
 }
