--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -12,5 +12,6 @@
   "dhp130:4": "do not harm or cause others to harm.",
   "dhp131:1": "One who violently harms",
   "dhp131:2": "beings who want pleasure,",
-  "dhp131:3": "while seeking pleasure for oneself"
+  "dhp131:3": "while seeking pleasure for oneself",
+  "dhp131:4": "will find no pleasure in the future."
 }
