--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -10,7 +10,7 @@
   "dhp130:2": "everyone likes to live;",
   "dhp130:3": "recognizing that you are similar,",
   "dhp130:4": "do not harm or cause others to harm.",
-  "dhp131:1": "One who violently harms",
+  "dhp131:1": "Beings want pleasure;",
   "dhp131:2": "beings who want pleasure,",
   "dhp131:3": "while seeking pleasure for oneself",
   "dhp131:4": "will find no pleasure in the future."
