--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -15,5 +15,6 @@
   "dhp131:3": "while seeking pleasure for oneself,",
   "dhp131:4": "one will find no pleasure in the future.",
   "dhp132:1": "Beings want pleasure;",
-  "dhp132:2": "if one does not harm them with violence"
+  "dhp132:2": "if one does not harm them with violence",
+  "dhp132:3": "while seeking pleasure for oneself,"
 }
