Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -16,5 +16,6 @@
   "dhp131:4": "one will have no pleasure in the future.",
   "dhp132:1": "Beings want pleasure;",
   "dhp132:2": "if one does not harm them with violence",
-  "dhp132:3": "while seeking pleasure for oneself,"
+  "dhp132:3": "while seeking pleasure for oneself,",
+  "dhp132:4": "one will have pleasure in the future."
 }
