--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -20,5 +20,6 @@
   "dhp132:4": "one will have pleasure in the future.",
   "dhp133:1": "Say no harsh words to anyone;",
   "dhp133:2": "they might respond in kind.",
-  "dhp133:3": "Hostile speech is painful,"
+  "dhp133:3": "Hostile speech is painful,",
+  "dhp133:4": "and it may provoke a violent response."
 }
