--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -13,7 +13,7 @@
   "dhp131:1": "Beings want pleasure;",
   "dhp131:2": "if one harms them with violence",
   "dhp131:3": "while seeking pleasure for oneself,",
-  "dhp131:4": "one will have no pleasure in the future.",
+  "dhp131:4": "one will find no pleasure in the future.",
   "dhp132:1": "Beings want pleasure;",
   "dhp132:2": "if one does not harm them with violence",
   "dhp132:3": "while seeking pleasure for oneself,",
