Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -17,7 +17,7 @@
   "dhp132:1": "Beings want pleasure;",
   "dhp132:2": "if one does not harm them with violence",
   "dhp132:3": "while seeking pleasure for oneself,",
-  "dhp132:4": "one will have pleasure in the future.",
+  "dhp132:4": "one will find pleasure in the future.",
   "dhp133:1": "Say no harsh words to anyone;",
   "dhp133:2": "they might respond in kind.",
   "dhp133:3": "Hostile speech is painful,",
