Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -21,5 +21,6 @@
   "dhp133:1": "Say no harsh words to anyone;",
   "dhp133:2": "they might respond in kind.",
   "dhp133:3": "Hostile speech is painful,",
-  "dhp133:4": "and it may provoke a violent response."
+  "dhp133:4": "and it may provoke a violent response.",
+  "dhp134:1": "If you are non-reactive,"
 }
