Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -23,5 +23,6 @@
   "dhp133:3": "Hostile speech is painful,",
   "dhp133:4": "and it may provoke a violent response.",
   "dhp134:1": "If you are non-reactive,",
-  "dhp134:2": "like a broken gong,"
+  "dhp134:2": "like a broken gong,",
+  "dhp134:3": "then you have reached Nibbāna"
 }
