Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp116-128_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp116-128_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp116-128_translation-en-suddhaso.json
@@ -49,7 +49,7 @@
   "dhp126:1": "Some people arise in wombs;",
   "dhp126:2": "evildoers, in hell;",
   "dhp126:3": "those on the right course go to heaven;",
-  "dhp126:4": "the uncorrupted attain enlightenment.",
+  "dhp126:4": "the uncorrupted attain Nibbāna.",
   "dhp127:1": "Not by going into the sky, or into the ocean,",
   "dhp127:2": "or into a mountain cleft,",
   "dhp127:3": "or anywhere in the world,",
