Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -25,5 +25,6 @@
   "dhp134:1": "If you are non-reactive,",
   "dhp134:2": "like a broken gong,",
   "dhp134:3": "then you have reached Nibbāna",
-  "dhp134:4": "and no conflict can be found in you."
+  "dhp134:4": "and no conflict can be found in you.",
+  "dhp135:1": "Just as a cowherd, using a stick,"
 }
