--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -26,5 +26,6 @@
   "dhp134:2": "like a broken gong,",
   "dhp134:3": "then you have reached Nibbāna",
   "dhp134:4": "and no conflict can be found in you.",
-  "dhp135:1": "Just as a cowherd, using a stick,"
+  "dhp135:1": "Just as a cowherd, using a stick,",
+  "dhp135:2": "herds cattle through a pasture,"
 }
