Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -28,5 +28,6 @@
   "dhp134:4": "and no conflict can be found in you.",
   "dhp135:1": "Just as a cowherd, using a stick,",
   "dhp135:2": "herds cattle through a pasture,",
-  "dhp135:3": "in the same way, decrepitude and death"
+  "dhp135:3": "in the same way, decrepitude and death",
+  "dhp135:4": "herd the living through life."
 }
