--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -31,5 +31,6 @@
   "dhp135:3": "in the same way, decrepitude and death",
   "dhp135:4": "herd the living through life.",
   "dhp136:1": "Performing evil actions,",
-  "dhp136:2": "a fool does not attain awakening."
+  "dhp136:2": "a fool does not attain awakening.",
+  "dhp136:3": "The unwise person is tormented by those actions"
 }
