Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -32,5 +32,6 @@
   "dhp135:4": "herd the living through life.",
   "dhp136:1": "Performing evil actions,",
   "dhp136:2": "a fool does not attain awakening.",
-  "dhp136:3": "The unwise person is tormented by those actions"
+  "dhp136:3": "The unwise person is tormented by those actions",
+  "dhp136:4": "as if burned by fire."
 }
