Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -33,5 +33,6 @@
   "dhp136:1": "Performing evil actions,",
   "dhp136:2": "a fool does not attain awakening.",
   "dhp136:3": "The unwise person is tormented by those actions",
-  "dhp136:4": "as if burned by fire."
+  "dhp136:4": "as if burned by fire.",
+  "dhp137:1": "One who uses violence against the nonviolent,"
 }
