--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -34,5 +34,6 @@
   "dhp136:2": "a fool does not attain awakening.",
   "dhp136:3": "The unwise person is tormented by those actions",
   "dhp136:4": "as if burned by fire.",
-  "dhp137:1": "One who uses violence against the nonviolent,"
+  "dhp137:1": "One who uses violence against the nonviolent,",
+  "dhp137:2": "who assaults the faultless,"
 }
