--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -35,5 +35,5 @@
   "dhp136:3": "The unwise person is tormented by those actions",
   "dhp136:4": "as if burned by fire.",
   "dhp137:1": "One who is violent towards the nonviolent,",
-  "dhp137:2": "one who assaults the faultless,"
+  "dhp137:2": "one who harms the harmless,"
 }
