--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -36,5 +36,6 @@
   "dhp136:4": "as if burned by fire.",
   "dhp137:1": "One who is violent towards the nonviolent,",
   "dhp137:2": "one who harms the harmless,",
-  "dhp137:3": "will soon experience"
+  "dhp137:3": "will soon experience",
+  "dhp137:4": "one of ten consequences:"
 }
