Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -39,5 +39,6 @@
   "dhp137:3": "will soon experience",
   "dhp137:4": "one of ten consequences:",
   "dhp138:1": "Harsh sensations, deprivation,",
-  "dhp138:2": "physical injury,"
+  "dhp138:2": "physical injury,",
+  "dhp138:3": "severe illness,"
 }
