--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -40,5 +40,6 @@
   "dhp137:4": "one of ten consequences:",
   "dhp138:1": "Harsh sensations, deprivation,",
   "dhp138:2": "physical injury,",
-  "dhp138:3": "severe illness,"
+  "dhp138:3": "severe illness,",
+  "dhp138:4": "mental derangement,"
 }
