--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -41,5 +41,6 @@
   "dhp138:1": "Harsh sensations, deprivation,",
   "dhp138:2": "physical injury,",
   "dhp138:3": "severe illness,",
-  "dhp138:4": "mental derangement,"
+  "dhp138:4": "mental derangement,",
+  "dhp139:1": "legal trouble,"
 }
