Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -42,5 +42,5 @@
   "dhp138:2": "physical injury,",
   "dhp138:3": "severe illness,",
   "dhp138:4": "mental derangement,",
-  "dhp139:1": "conflict with the government,"
+  "dhp139:1": "legal trouble,"
 }
