--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -42,5 +42,6 @@
   "dhp138:2": "physical injury,",
   "dhp138:3": "severe illness,",
   "dhp138:4": "mental derangement,",
-  "dhp139:1": "legal trouble,"
+  "dhp139:1": "legal trouble,",
+  "dhp139:2": "severe accusations"
 }
