Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -43,5 +43,6 @@
   "dhp138:3": "severe illness,",
   "dhp138:4": "mental derangement,",
   "dhp139:1": "legal trouble,",
-  "dhp139:2": "severe accusations,"
+  "dhp139:2": "severe accusations,",
+  "dhp139:3": "loss of relatives,"
 }
