Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -44,5 +44,6 @@
   "dhp138:4": "mental derangement,",
   "dhp139:1": "legal trouble,",
   "dhp139:2": "severe accusations,",
-  "dhp139:3": "loss of relatives,"
+  "dhp139:3": "loss of relatives,",
+  "dhp139:4": "dissipation of wealth,"
 }
