--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -47,5 +47,5 @@
   "dhp139:3": "loss of relatives,",
   "dhp139:4": "dissipation of wealth,",
   "dhp140:1": "or their house",
-  "dhp140:2": "catching fire."
+  "dhp140:2": "catching on fire."
 }
