Translations by trush23 to translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json

--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -161,5 +161,6 @@
   "mn9:48-50.5": "तब आदरणीयो, आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है।",
   "mn9:48-50.6": "आदरणीयो, छह इंद्रियां क्या है, छह इंद्रियों का उदय क्या है, छह इंद्रियों का निरोध क्या है, छह इंद्रियों के निरोध की ओर ले जानेवाला मार्ग क्या है?",
   "mn9:48-50.7": "आदरणीयो, छह प्रकार की इंद्रियां होती हैं—",
-  "mn9:48-50.8": "आंख, कान, नाक, ज़बान, काया, और मनोइंद्रिय।"
+  "mn9:48-50.8": "आंख, कान, नाक, ज़बान, काया, और मनोइंद्रिय।",
+  "mn9:48-50.9": "नामरूप के उदय के साथ छह इंद्रियों का उदय होता है, नामरूप के निरोध के साथ छह इंद्रियों का निरोध होता है, छह इंद्रियों के निरोध की ओर ले जानेवाला मार्ग वह केवल आर्यअष्टांग मार्ग है—"
 }
