--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -162,5 +162,6 @@
   "mn9:48-50.6": "आदरणीयो, छह इंद्रियां क्या है, छह इंद्रियों का उदय क्या है, छह इंद्रियों का निरोध क्या है, छह इंद्रियों के निरोध की ओर ले जानेवाला मार्ग क्या है?",
   "mn9:48-50.7": "आदरणीयो, छह प्रकार की इंद्रियां होती हैं—",
   "mn9:48-50.8": "आंख, कान, नाक, ज़बान, काया, और मनोइंद्रिय।",
-  "mn9:48-50.9": "नामरूप के उदय के साथ छह इंद्रियों का उदय होता है, नामरूप के निरोध के साथ छह इंद्रियों का निरोध होता है, छह इंद्रियों के निरोध की ओर ले जानेवाला मार्ग वह केवल आर्यअष्टांग मार्ग है—"
+  "mn9:48-50.9": "नामरूप के उदय के साथ छह इंद्रियों का उदय होता है, नामरूप के निरोध के साथ छह इंद्रियों का निरोध होता है, छह इंद्रियों के निरोध की ओर ले जानेवाला मार्ग वह केवल आर्यअष्टांग मार्ग है—",
+  "mn9:48-50.10": "सम्यक् दृष्टि, सम्यक् संकल्प, सम्यक् वाणी, सम्यक् कार्य, सम्यक् आजीविका, सम्यक् उद्यम, सम्यक् स्मृति, सम्यक् समाधि।"
 }
