--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -49,5 +49,6 @@
   "dhp140:1": "or their house",
   "dhp140:2": "catching on fire.",
   "dhp140:3": "Then, when the fool is separated from their body,",
-  "dhp140:4": "they will reappear in hell."
+  "dhp140:4": "they will reappear in hell.",
+  "dhp141:1": "Nudity, tangled hair, filth,"
 }
