Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -51,5 +51,6 @@
   "dhp140:3": "Then, when the fool is separated from their body,",
   "dhp140:4": "they will reappear in hell.",
   "dhp141:1": "Nudity, tangled hair, filth,",
-  "dhp141:2": "fasting, sleeping on the ground,"
+  "dhp141:2": "fasting, sleeping on the ground,",
+  "dhp141:3": "squatting in the mud -"
 }
