--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -52,5 +52,6 @@
   "dhp140:4": "they will reappear in hell.",
   "dhp141:1": "Nudity, tangled hair, filth,",
   "dhp141:2": "fasting, sleeping on the ground,",
-  "dhp141:3": "squatting in the mud -"
+  "dhp141:3": "squatting in the mud -",
+  "dhp141:4": "these cannot purify a mortal who has yet to transcend doubt."
 }
