Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -53,5 +53,5 @@
   "dhp141:1": "Nudity, tangled hair, filth,",
   "dhp141:2": "fasting, sleeping on the ground,",
   "dhp141:3": "squatting in the mud -",
-  "dhp141:4": "these cannot purify a mortal who has yet to transcend doubt."
+  "dhp141:4": "these cannot purify a mortal who has yet to go beyond doubt."
 }
