--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -53,5 +53,6 @@
   "dhp141:1": "Nudity, tangled hair, filth,",
   "dhp141:2": "fasting, sleeping on the ground,",
   "dhp141:3": "squatting in the mud -",
-  "dhp141:4": "these cannot purify a mortal who has not yet gone beyond doubt."
+  "dhp141:4": "these cannot purify a mortal who has not yet gone beyond doubt.",
+  "dhp142:1": "However, even one who wears adornments, if they are well-behaved,"
 }
