Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -56,5 +56,6 @@
   "dhp141:4": "these cannot purify a mortal who has not yet gone beyond doubt.",
   "dhp142:1": "However, even one who wears adornments, if they are well-behaved,",
   "dhp142:2": "peaceful, restrained, committed to spiritual practice,",
-  "dhp142:3": "and have renounced violence towards all beings"
+  "dhp142:3": "and have renounced violence towards all beings",
+  "dhp142:4": "is a holy person, a contemplative, a monk."
 }
