--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -58,5 +58,6 @@
   "dhp142:2": "peaceful, restrained, committed to spiritual practice,",
   "dhp142:3": "and has renounced violence towards all beings,",
   "dhp142:4": "then they are a saint, a contemplative, a monk.",
-  "dhp143:1": "What person can be found in this world"
+  "dhp143:1": "What person can be found in this world",
+  "dhp143:2": "that is restrained by conscience?"
 }
