Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -60,5 +60,6 @@
   "dhp142:4": "then they are a saint, a contemplative, a monk.",
   "dhp143:1": "What person can be found in this world",
   "dhp143:2": "that is restrained by conscience?",
-  "dhp143:3": "Who wakes up when criticized,"
+  "dhp143:3": "Who wakes up when criticized,",
+  "dhp143:4": "like a fine horse struck by a whip?"
 }
