--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -61,5 +61,6 @@
   "dhp143:1": "What person can be found in this world",
   "dhp143:2": "that is restrained by conscience?",
   "dhp143:3": "Who wakes up when criticized,",
-  "dhp143:4": "like a fine horse struck by a whip?"
+  "dhp143:4": "like a fine horse struck by a whip?",
+  "dhp144:1": "Like a fine horse struck by a whip,"
 }
