--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -63,5 +63,6 @@
   "dhp143:3": "Who wakes up when criticized,",
   "dhp143:4": "like a fine horse struck by a whip?",
   "dhp144:1": "Like a fine horse struck by a whip,",
-  "dhp144:2": "be ardent and filled with urgency."
+  "dhp144:2": "be ardent and filled with urgency.",
+  "dhp144:3": "By means of faith, virtue, determination,"
 }
