Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -66,5 +66,6 @@
   "dhp144:2": "be ardent and filled with urgency.",
   "dhp144:3": "By means of faith, virtue, determination,",
   "dhp144:4": "concentration, investigation of Dhamma,",
-  "dhp144:5": "perfect knowledge, perfect conduct, and thorough awareness,"
+  "dhp144:5": "perfect knowledge, perfect conduct, and thorough awareness,",
+  "dhp144:6": "abandon this immense suffering."
 }
