Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -67,5 +67,6 @@
   "dhp144:3": "By means of faith, virtue, determination,",
   "dhp144:4": "concentration, investigation of Dhamma,",
   "dhp144:5": "perfect knowledge, perfect conduct, and thorough awareness,",
-  "dhp144:6": "abandon this immense suffering."
+  "dhp144:6": "abandon this immense suffering.",
+  "dhp145:1": "Irrigators guide water,"
 }
