Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -68,5 +68,6 @@
   "dhp144:4": "concentration, investigation of Dhamma,",
   "dhp144:5": "perfect knowledge, perfect conduct, and thorough awareness,",
   "dhp144:6": "abandon this immense suffering.",
-  "dhp145:1": "Irrigators guide water,"
+  "dhp145:1": "Irrigators guide water,",
+  "dhp145:2": "fletchers shape arrows,"
 }
