Translations by suddhaso to translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json

--- a/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
+++ b/translation/en/suddhaso/sutta/kn/dhp/dhp129-145_translation-en-suddhaso.json
@@ -70,5 +70,6 @@
   "dhp144:6": "abandon this immense suffering.",
   "dhp145:1": "Irrigators guide water,",
   "dhp145:2": "fletchers shape arrows,",
-  "dhp145:3": "carpenters shape wood,"
+  "dhp145:3": "carpenters shape wood,",
+  "dhp145:4": "those who practice well train themselves."
 }
