--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -169,5 +169,6 @@
   "mn9:52-54.1": "“बहुत अच्छा आदरणीय” ऐसा कहके भिक्षु सारिपुत्र के वचनों से सहमत और खुश हुए और फिर उन्होंने दूसरा सवाल पूछा:",
   "mn9:52-54.2": "“लेकिन आदरणीय, कोइ दूसरी रीति है जिस से आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है”?",
   "mn9:52-54.3": "“है, आदरणीयो।",
-  "mn9:52-54.4": "जब आर्यसाधक नामरूप को समझता है, नामरूप के उदय को समझता है, नामरूप के निरोध को समझता है, नामरूप के निरोध की ओर ले जानेवाले मार्ग को समझता है—"
+  "mn9:52-54.4": "जब आर्यसाधक नामरूप को समझता है, नामरूप के उदय को समझता है, नामरूप के निरोध को समझता है, नामरूप के निरोध की ओर ले जानेवाले मार्ग को समझता है—",
+  "mn9:52-54.5": "तब आदरणीयो, आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है।"
 }
