--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -170,5 +170,6 @@
   "mn9:52-54.2": "“लेकिन आदरणीय, कोइ दूसरी रीति है जिस से आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है”?",
   "mn9:52-54.3": "“है, आदरणीयो।",
   "mn9:52-54.4": "जब आर्यसाधक नामरूप को समझता है, नामरूप के उदय को समझता है, नामरूप के निरोध को समझता है, नामरूप के निरोध की ओर ले जानेवाले मार्ग को समझता है—",
-  "mn9:52-54.5": "तब आदरणीयो, आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है।"
+  "mn9:52-54.5": "तब आदरणीयो, आर्यसाधक सम्यक् दृष्टिवान कहेलाता है, जिसकी दृष्टि सीधी है, जिसे आर्यधर्म में अटूट श्रद्धा है, और जो सद्धर्म में आ पहुंचा है।",
+  "mn9:52-54.6": "आदरणीयो, नामरूप क्या है, नामरूप का उदय क्या है, नामरूप का निरोध क्या है, नामरूप के निरोध की ओर ले जानेवाला मार्ग क्या है?"
 }
