Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -652,6 +652,7 @@
   "sn-name:651.sn22.44": "Übung ",
   "sn-name:652.sn22.45": "Unbeständigkeit ",
   "sn-name:653.sn22.46": "Unbeständigkeit (2) ",
+  "sn-name:654.sn22.47": "Betrachtungsweisen ",
   "sn-name:655.sn22.48": "Aggregate ",
   "sn-name:660.sn22-majjhimapannasaka": "Die mittleren Fünfzig ",
   "sn-name:661.sn22-upayavagga": "Das Kapitel über Gebundenheit ",
