Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.47:0.2": "5. Das Kapitel darüber, deine eigene Insel zu sein ",
   "sn22.47:0.3": "Betrachtungsweisen ",
   "sn22.47:1.1": "In Sāvatthī. ",
-  "sn22.47:1.2": "„Mönche und Nonnen, alle Asketen und Brahmanen, die verschiedene Dinge als das Selbst ansehen, alle sehen die fünf mit Ergreifen verbundenen Aggregate so an, oder eines von ihnen. "
+  "sn22.47:1.2": "„Mönche und Nonnen, alle Asketen und Brahmanen, die verschiedene Dinge als das Selbst ansehen, alle sehen die fünf mit Ergreifen verbundenen Aggregate so an, oder eines von ihnen. ",
+  "sn22.47:1.3": "Welche fünf? "
 }
