--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn22.47:1.5": "Er betrachtet Form als das Selbst, das Selbst als etwas, das Form hat, Form als im Selbst oder das Selbst als in der Form. ",
   "sn22.47:1.6": "Er betrachtet Gefühl als das Selbst … ",
   "sn22.47:1.7": "Er betrachtet Wahrnehmung als das Selbst … ",
-  "sn22.47:1.8": "Er betrachtet Entscheidungen als das Selbst … "
+  "sn22.47:1.8": "Er betrachtet Entscheidungen als das Selbst … ",
+  "sn22.47:1.9": "Er betrachtet Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. "
 }
