--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -175,5 +175,6 @@
   "mn9:52-54.7": "संवेदना, संज्ञान, चैतन्य, संपर्क, मनोलक्ष्य—",
   "mn9:52-54.8": "इसे आदरणीयो, नाम कहा जाता है;",
   "mn9:52-54.9": "चार महाभूत तत्व और उनसे उत्पन्न हए रूप—",
-  "mn9:52-54.10": "इसे आदरणीयो, रूप कहा जाता है।"
+  "mn9:52-54.10": "इसे आदरणीयो, रूप कहा जाता है।",
+  "mn9:52-54.11": "इस तरह नाम है इस तरह रूप है—"
 }
