--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn22.47:1.6": "Er betrachtet Gefühl als das Selbst … ",
   "sn22.47:1.7": "Er betrachtet Wahrnehmung als das Selbst … ",
   "sn22.47:1.8": "Er betrachtet Entscheidungen als das Selbst … ",
-  "sn22.47:1.9": "Er betrachtet Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. "
+  "sn22.47:1.9": "Er betrachtet Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
+  "sn22.47:2.1": "So ist er  nicht frei von dieser Art, die Dinge zu betrachten, und der Einbildung ‚ich bin‘. "
 }
