Translations by trush23 to translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json

--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -177,5 +177,6 @@
   "mn9:52-54.9": "चार महाभूत तत्व और उनसे उत्पन्न हए रूप—",
   "mn9:52-54.10": "इसे आदरणीयो, रूप कहा जाता है।",
   "mn9:52-54.11": "इस तरह नाम है इस तरह रूप है—",
-  "mn9:52-54.12": "इसे आदरणीयो, नामरूप कहा जाता है।"
+  "mn9:52-54.12": "इसे आदरणीयो, नामरूप कहा जाता है।",
+  "mn9:52-54.13": "चैतन्य के उदय के साथ नामरूप का उदय होता है, चैतन्य के निरोध के साथ नामरूप का निरोध होता है, नामरूप के निरोध की ओर ले जानेवाला मार्ग वह केवल आर्यअष्टांग मार्ग है—"
 }
