--- a/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn9_translation-hi-trush.json
@@ -178,5 +178,6 @@
   "mn9:52-54.10": "इसे आदरणीयो, रूप कहा जाता है।",
   "mn9:52-54.11": "इस तरह नाम है इस तरह रूप है—",
   "mn9:52-54.12": "इसे आदरणीयो, नामरूप कहा जाता है।",
-  "mn9:52-54.13": "चैतन्य के उदय के साथ नामरूप का उदय होता है, चैतन्य के निरोध के साथ नामरूप का निरोध होता है, नामरूप के निरोध की ओर ले जानेवाला मार्ग वह केवल आर्यअष्टांग मार्ग है—"
+  "mn9:52-54.13": "चैतन्य के उदय के साथ नामरूप का उदय होता है, चैतन्य के निरोध के साथ नामरूप का निरोध होता है, नामरूप के निरोध की ओर ले जानेवाला मार्ग वह केवल आर्यअष्टांग मार्ग है—",
+  "mn9:52-54.14": "सम्यक् दृष्टि, सम्यक् संकल्प, सम्यक् वाणी, सम्यक् कार्य, सम्यक् आजीविका, सम्यक् उद्यम, सम्यक् स्मृति, सम्यक् समाधि।"
 }
