--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.47_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn22.47:1.8": "Er betrachtet Entscheidungen als das Selbst … ",
   "sn22.47:1.9": "Er betrachtet Bewusstsein als das Selbst, das Selbst als etwas, das Bewusstsein hat, Bewusstsein als im Selbst oder das Selbst als im Bewusstsein. ",
   "sn22.47:2.1": "So ist er  nicht frei von dieser Art, die Dinge zu betrachten, und der Einbildung ‚ich bin‘. ",
-  "sn22.47:2.2": "Solange er nicht frei ist von der Einbildung ‚ich bin‘, werden die fünf Sinne empfangen: "
+  "sn22.47:2.2": "Solange er nicht frei ist von der Einbildung ‚ich bin‘, werden die fünf Sinne empfangen: ",
+  "sn22.47:2.3": "Sehsinn, Hörsinn, Geruchssinn, Geschmackssinn und Berührungssinn. "
 }
